# person

./: CMakeLists.txt  main.cpp  people.txt
classes/Person/: Person.cpp  Person.h
classes/PersonList/: PersonList.cpp  PersonList.h
classes/Util/: Util.cpp  Util.h
